# mermaid-segmentation

./: .env.example  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SUBMIT_BASELINE.sh  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: ask.yml  blank.yml  bug.yml  config.yml  data-acquisition.yml  data-create.yml  experiment.yml  explore.yml  model.yml  workstreams.yml
.github/workflows/: lint.yml  notebooks.yml  tests.yml
.jupyter/: jupyter_lab_config.py
configs/: base.yaml  base_coralnet.yaml  base_coralnet_focus_sources.yaml  base_mermaid.yaml  benchmark.yaml  class_to_concepts.csv  class_to_concepts_stub.csv  combined_mermaid_coralnet.yaml  concept_mermaid.yaml  coralnet_to_mermaid_mapping_temporary.json  data_config.yaml  data_config_dinov3_base.yaml  focus_sources_train.csv  focus_sources_val.csv  linear-dinov2-base-concept.yaml  linear-dinov2-base.yaml  linear-dinov3-base.yaml  linear-dinov3-concept-bottleneck.yaml  linear-dinov3-concept.yaml  logger_config.yaml  model_config.yaml  model_config_cbm.yaml  model_config_cbm_dpt_vitl.yaml  model_config_cbm_vitl.yaml  model_config_dinov3_base.yaml  model_config_dpt_lora_vitl.yaml  model_config_dpt_vitl.yaml  run1_class_subset.csv  run1_test_sources.csv  run1_train_sources.csv  run1_val_sources.csv  sagemaker_coralnet_three_sources.yaml  segformer-coralscapes.yaml  segformer-mit-b2.yaml  training_config.yaml  training_config_cbm.yaml  training_config_dinov3_base.yaml
demo/: README.md  app.py  concept_id2name.json  id2label.json  inference.py  model_config_cbm_dpt_lora_vitl.yaml  rendering.py  requirements.txt
docker/jobs/: CLAUDE.md  Dockerfile  entrypoint.sh  local_smoke.sh
docs/: BASELINE_QUICK_START.md  BASELINE_SUBMISSION.md  sagemaker.md
docs/superpowers/plans/: 2026-05-01-mlflow-dataset-statistics.md  2026-05-25-coralnet-image-resizing.md
docs/superpowers/specs/: 2026-05-01-mlflow-dataset-statistics-design.md  2026-05-25-coralnet-image-resizing-design.md
mermaidseg/: io.py  logger.py  visualization.py
mermaidseg/dataset_reconciliation/: README.md  __init__.py  combined.py  concept_schema.py  concepts.py  dataset_stats.py  label_mapping.py  registry.py  split_wiring.py
mermaidseg/datasets/: __init__.py  base_dataset.py  concepts.py  dataset.py  labelspace.py  local_cache.py  utils.py
mermaidseg/datasets/benthos_yuval/: README.md  __init__.py  benthos_yuval_corals_dataset.py  verify_raw_data_and_add_to_s3.py
mermaidseg/datasets/catlin_seaview/: README.md  __init__.py  catlin_seaview_dataset.py  download_raw_data_and_add_to_s3.py
mermaidseg/datasets/coralnet/: README.md  __init__.py  coralnet_dataset.py
mermaidseg/datasets/coralscapes/: README.md  __init__.py  coralscapes_dataset.py
mermaidseg/datasets/coralscapes_v2/: README.md  __init__.py  coralscapes_v2_dataset.py
mermaidseg/datasets/mermaid/: README.md  __init__.py  add_to_s3.ipynb  add_to_s3.py  mermaid_dataset.py
mermaidseg/datasets/moorea_labeled_corals/: README.md  __init__.py  moorea_labeled_corals_dataset.py  verify_raw_data_and_add_to_s3.py
mermaidseg/datasets/pacific_labeled_corals/: README.md  __init__.py  pacific_labeled_corals_dataset.py  verify_raw_data_and_add_to_s3.py
mermaidseg/datasets/ucsd_mosaics/: README.md  __init__.py  ucsd_mosaics_dataset.py
mermaidseg/demo/: __init__.py  app.py  demo_v2_app.py  inference.py
mermaidseg/model/: concept_metrics.py  eval.py  loss.py  meta.py  metric_policy.py  models.py  train.py
mermaidseg/sagemaker/: __init__.py  launcher_config.py
nbs/: Base_Pipeline.ipynb  Combined_Pipeline.ipynb  Concept_Bottleneck_Pipeline.ipynb  Concept_Bottleneck_Pipeline.py  Concept_Bottleneck_Pipeline_vitL.py  Concept_Bottleneck_Pipeline_vitL_lora_dpt.py  Concept_Mapping.ipynb  Concept_Pipeline.ipynb  CoralNet.ipynb  CoralNet_Source_Audit.ipynb  CoralNet_Source_Check.ipynb  Dataset_Exploration.ipynb  Model_Evaluation.ipynb  SegFormer_Pipeline.ipynb  nb_setup.py
nbs/EDA/: coralnet_eda.ipynb  coralnet_eda_validated.ipynb  coralnet_scraping_eda.ipynb  coralnet_source_split.ipynb  coralnet_truncated_file_read.ipynb  image_validation.ipynb  label&concept_mapping_eda.ipynb  mermaid_annotation_counts.csv
nbs/EDA/dataframes/: CoralNetMermaidMatchedCoralFocusModel2Reassign_20240503.csv  (+10 more)
nbs/datasets/: CoralNet_Annotations.ipynb  Dataset_Exploration.ipynb  preprocessing_and_mapping_exploration.ipynb
nbs/nb_experiments/: Profiler.ipynb  Time_Test.ipynb
sagemaker/runs/: example-processing.yaml  example-training.yaml  issue_129_dinov3_baseline.yaml  issue_130_coralnet_etl_audit.yaml  issue_130_coralnet_refresh.yaml  issue_130_coralnet_refresh_retry.yaml  issue_130_coralnet_refresh_retry_2workers.yaml
scraping/: coralnet_analysis.ipynb  coralnet_labels_annotations.csv  coralnet_scraper.py  scrape_coralnet.ipynb  scrape_coralnet_s3.ipynb  scrape_coralnet_s3.py  scrape_imagelist.ipynb
scripts/: audit_coralnet_sources.py  build_coralnet_training_manifest.py  build_coralnet_training_parquet.py  build_resize_manifest.py  check_resize_completeness.py  check_sagemaker_env.py  launch_processing.py  launch_training.py  lcc_setup.sh  preprocess_coralnet_images.py  redownload_truncated_images.py  run_coralnet_resize.py  sagemaker_processing_entrypoint.py  sagemaker_train_entrypoint.py  sync_env.sh  train.py  train_baseline.py  verify_dataset_stats_subset.py
tests/: _dataset_stubs.py  conftest.py  test_concept_accuracy.py  test_concept_schema.py  test_dataset_stats.py  test_datasets.py  test_integration.py  test_local_cache.py  test_logger.py  test_loss_components.py  test_metric_policy.py  test_split_wiring.py  test_standard_pipeline_smoke.py
tests/model/: test_train_model_integration.py
tests/sagemaker_launcher/: test_launch_processing.py  test_launch_training.py  test_launcher_config.py  test_processing_entrypoint.py
wiki/: Code-Style.md  CoralNet-ETL.md  Getting-Started.md  Git-Workflow.md  Home.md  Reproducibility.md  SageMaker-Jobs.md  Team-Process.md  Using-Notebooks.md  Writing-Tickets.md
(+66 files in other folders)
