[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaidseg"
version = "0.1.0"
description = "A package for the segmentation of MERMAID coral data."
requires-python = ">=3.11"
dependencies = [
    "albumentations",
    "beautifulsoup4",
    "boto3",
    "numpy>=1.24,<2",
    "pandas",
    "pillow",
    "requests",
    "torch>=2.4,<2.8",
    "transformers",
    "datasets>=3.0",
    "s3fs",
    "segmentation-models-pytorch",
    "mlflow",
    "pyyaml",
    "tqdm",
    "torchmetrics",
    "anytree",
    "openpyxl",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "huggingface-hub>=0.36.2",
    "seaborn>=0.13.2",
    "opencv-python-headless>=4.11.0.86",
    "sagemaker-mlflow>=0.2.0",
    "requests-auth-aws-sigv4>=0.7",
    "safetensors>=0.4.0",
    "ibis-framework[duckdb]>=9.0",
]

[project.scripts]
coralnet-etl = "mermaidseg.datasets.coralnet.etl.__main__:main"
coralnet-remediate = "mermaidseg.datasets.coralnet.scraper.remediate_incomplete:main"

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "ipywidgets",
    "wandb>=0.25.0",
    "hvplot>=0.12.2",
    "great-tables>=0.21.0",
]
scraping = [
    "selenium",
    "webdriver-manager",
]
test-live = [
    "playwright>=1.50",
]

[dependency-groups]
tests = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
lint = [
    "ruff>=0.15.8",
    "pre-commit>=3.0",
]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    "docformatter>=1.7.7",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["mermaidseg*"] } }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "PD"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "F821",   # undefined names — common in exploratory notebook cells
    "B018",   # useless expression — used to display values in notebooks
    "E501",   # line too long — handled by docformatter; notebook cells are hard to wrap
    "UP031",
    "PD003", # pandas-vet: prefer isna — wrong for Ibis .isnull() / SQL NULL
]

[tool.ruff.lint.isort]
known-first-party = ["mermaidseg"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-m",
    "not live",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: marks tests as live integration tests requiring S3 and/or CoralNet access (deselect with '-m \"not live\"')",
]

[tool.coverage.run]
source = ["mermaidseg"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
