[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaidseg"
version = "0.1.0"
description = "A package for the segmentation of MERMAID coral data."
requires-python = ">=3.11"
# Core = inference + data-loading only. Training, CoralNet ETL/scraper, notebooks/viz,
# and the demo live in extras (see [project.optional-dependencies]). s3fs stays here
# because the datasets read their annotation parquets from s3:// via pandas.
dependencies = [
    "albumentations",
    "boto3",
    "datasets>=3.0",
    "huggingface-hub>=0.36.2",
    "numpy>=1.24,<2",
    "opencv-python-headless>=4.11.0.86",
    "pandas",
    "peft>=0.19.1",
    "pillow",
    "pyyaml",
    "requests",
    "s3fs>=2024.2.0",
    "safetensors>=0.4.0",
    "torch>=2.4,<2.8",
    "tqdm",
    "transformers",
]

[project.scripts]
coralnet-etl = "mermaidseg.datasets.coralnet.etl.__main__:main"
coralnet-remediate = "mermaidseg.datasets.coralnet.scraper.remediate_incomplete:main"
coralnet-refresh = "mermaidseg.datasets.coralnet.scraper.refresh_image_lists:main"
coralnet-resize = "mermaidseg.datasets.coralnet.preprocessing.resize:main"

[project.optional-dependencies]
# Training + experiment tracking (mermaidseg/logger.py, mermaidseg/model/eval.py).
training = [
    "mlflow",
    "sagemaker-mlflow>=0.2.0",
    "torchmetrics",
]
# Host-side SageMaker job submission (scripts/launch_*.py); imported lazily.
sagemaker = [
    "sagemaker>=2.0,<3.0",
]
# CoralNet ETL + scraper console scripts (coralnet-etl/-refresh/-resize): ibis/duckdb
# for the ETL/manifest, bs4/selenium for scraping.
coralnet = [
    "ibis-framework[duckdb]>=9.0",
    "beautifulsoup4",
    "selenium",
    "webdriver-manager",
]
# Interactive exploration + plotting.
notebooks = [
    "jupyter",
    "ipywidgets",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "hvplot>=0.12.2",
    "great-tables>=0.21.0",
]
test-live = [
    "playwright>=1.50",
]
demo = [
    "gradio>=5.0",
]
# Everything (used by CI and `uv sync --extra all` / `uv sync --all-extras`).
all = [
    "mermaidseg[training,sagemaker,coralnet,notebooks,demo]",
]

[dependency-groups]
tests = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
lint = [
    "ruff>=0.15.8",
    "pre-commit>=3.0",
]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    "docformatter>=1.7.7",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["mermaidseg*"] } }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "RET", "SIM", "PD"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "F821",   # undefined names — common in exploratory notebook cells
    "B018",   # useless expression — used to display values in notebooks
    "E501",   # line too long — handled by docformatter; notebook cells are hard to wrap
    "UP031",
    "PD003", # pandas-vet: prefer isna — wrong for Ibis .isnull() / SQL NULL
]

[tool.ruff.lint.isort]
known-first-party = ["mermaidseg"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-m",
    "not live",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "live: marks tests as live integration tests requiring S3 and/or CoralNet access (deselect with '-m \"not live\"')",
]

[tool.coverage.run]
source = ["mermaidseg"]
omit = ["tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
